21-06/Files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html   # стандартная директория nginx
      - name: multitool
        image: wbitt/network-multitool:latest
        command: ["/bin/sh", "-c", "sleep infinity"]
        ports:
        - containerPort: 1180
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
