21-06/Files/deploy-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-https
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-https
  template:
    metadata:
      labels:
        app: web-https
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html
        configMap:
          name: web-content
---
apiVersion: v1
kind: Service
metadata:
  name: web-https-service
spec:
  selector:
    app: web-https
  ports:
    - port: 80
      targetPort: 80
