21-06/Files/service_curl.yml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  selector:
    app: web-app
  ports:
    - name: nginx
      port: 80
      targetPort: 80
  type: ClusterIP
